--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     />
   </head>
   <body>
-    sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+      veniam fugiat quia voluptatum doloremque, quidem velit natus dolor quos
+      quam in cum. Provident voluptatum dolor laborum eum neque, ducimus itaque!
+    </p>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
