--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
+    <script src="./code.js"></script>
   </body>
 </html>
