--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       veniam fugiat quia voluptatum doloremque, quidem velit natus dolor quos
       quam in cum. Provident voluptatum dolor laborum eum neque, ducimus itaque!
     </p>
+    <div>
+      <div>
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+      </div>
+    </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
