--- a/index.html
+++ b/index.html
@@ -19,19 +19,85 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p>
+    <p class="m-5">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus
       veniam fugiat quia voluptatum doloremque, quidem velit natus dolor quos
       quam in cum. Provident voluptatum dolor laborum eum neque, ducimus itaque!
     </p>
-    <div>
-      <div>
-        <h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <h3>Heading 3</h3>
-        <h4>Heading 4</h4>
-        <h5>Heading 5</h5>
-        <h6>Heading 6</h6>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-3">
+          <h1>Heading 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
+        <div class="col-3">
+          <h1>Heading 2</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
+        <div class="col-3">
+          <h1>Heading 3</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
+        <div class="col-3">
+          <h1>Heading 4</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
+        <div class="col-3">
+          <h1>Heading 5</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
+        <div class="col-3">
+          <h1>Heading 6</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
+        <div class="col-3">
+          <h1>Heading 7</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
+        <div class="col-3">
+          <h1>Heading 8</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quidem, voluptates, quod, quos quas quae quibusdam doloribus
+            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
+            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
+          </p>
+        </div>
       </div>
     </div>
     <!-- Bootstrap JavaScript Libraries -->
@@ -46,6 +112,6 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
-    <script src="./code.js"></script>
+    <!-- <script src="./code.js"></script> -->
   </body>
 </html>
