--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p class="m-5">
+    <p class="mt-5">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus
       veniam fugiat quia voluptatum doloremque, quidem velit natus dolor quos
       quam in cum. Provident voluptatum dolor laborum eum neque, ducimus itaque!
     </p>
     <div class="container">
+      <div class="row justify-content-center">
+        <div class="text-center">
+          <button class="btn btn-primary">Click Me</button>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-3">
           <h1>Heading 1</h1>
@@ -112,6 +119,6 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="./code.js"></script> -->
+    <script src="./code.js"></script>
   </body>
 </html>
