fix: modificando de estilos css y colores actuales

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <h1 class="text-center mt-3">Hello World</h1>
     <p class="mt-5">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus
       veniam fugiat quia voluptatum doloremque, quidem velit natus dolor quos
@@ -27,7 +28,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="text-center">
-          <button class="btn btn-primary">Click Me</button>
+          <button class="btn btn-secondary">Click Me</button>
         </div>
       </div>
     </div>
