--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div class="row justify-content-center">
         <div class="text-center">
           <button class="btn btn-secondary">Click Me</button>
+          <button class="btn btn-primary" id="info">Info</button>
         </div>
-      </div>
     </div>
     <div class="container mt-5">
       <div class="row justify-content-center">
