--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>GIT</title>
+    <title>GIT - Example</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -106,6 +106,12 @@
             quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
           </p>
         </div>
+        <!-- footer -->
+        <footer class="bg-light text-center text-lg-start">
+          <div class="text-center p-3">
+            © 2025 GIT - Example
+          </div>
+        </footer>
       </div>
     </div>
     <!-- Bootstrap JavaScript Libraries -->
