modificaciones rama_example6

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="text-center">
           <button class="btn btn-secondary">Click Me</button>
           <button class="btn btn-primary" id="info">Info</button>
+          <button class="btn btn-warning text-white" id="details">Details</button>
         </div>
     </div>
     <div class="container mt-5">
