--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" id="git_link">GIT</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" id="details_link">Details</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <h1 class="text-center mt-3">Hello World</h1>
     <p class="mt-5">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus
