modificaciones detalles main

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="text-center">
-          <button class="btn btn-secondary">Click Me</button>
+          <button class="btn btn-secondary" id="click">Click Me</button>
           <button class="btn btn-primary" id="info">Info</button>
           <button class="btn btn-warning text-white" id="details">Details</button>
         </div>
