agregacion de notificaciones

--- a/details.html
+++ b/details.html
@@ -22,7 +22,15 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">GIT</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,11 +58,13 @@
         <div class="text-center">
           <button class="btn btn-secondary" id="click">Click Me</button>
           <button class="btn btn-primary" id="info">Info</button>
-          <button class="btn btn-warning text-white" id="details">Details</button>
+          <button class="btn btn-warning text-white" id="details">
+            Details
+          </button>
         </div>
-    </div>
-    <div class="container mt-5">
-       <!-- crearme un deatils  -->
+      </div>
+      <div class="container mt-5">
+        <!-- crearme un deatils  -->
         <div class="p-3 mb-2 bg-primary text-white">.bg-primary</div>
         <div class="p-3 mb-2 bg-secondary text-white">.bg-secondary</div>
         <div class="p-3 mb-2 bg-success text-white">.bg-success</div>
@@ -68,12 +78,12 @@
         <div class="p-3 mb-2 bg-transparent text-dark">.bg-transparent</div>
         <!-- footer -->
         <footer class="bg-light text-center text-lg-start">
-          <div class="text-center p-3">
-            © 2025 GIT - Example
-          </div>
+          <div class="text-center p-3">© 2025 GIT - Example</div>
         </footer>
       </div>
     </div>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
@@ -86,6 +96,8 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
+    <!-- notify -->
+    <script src="./dist/notify.js"></script>
     <script src="./code.js"></script>
   </body>
 </html>
