--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
     <!-- Bootstrap CSS v5.2.0-beta1 -->
     <link
       rel="stylesheet"
@@ -22,7 +21,15 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">GIT</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,9 +57,13 @@
         <div class="text-center">
           <button class="btn btn-secondary" id="click">Click Me</button>
           <button class="btn btn-primary" id="info">Info</button>
-          <button class="btn btn-warning text-white" id="details">Details</button>
+          <button class="btn btn-warning text-white" id="details">
+            Details
+          </button>
         </div>
+      </div>
     </div>
+
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-3">
@@ -129,12 +140,12 @@
         </div>
         <!-- footer -->
         <footer class="bg-light text-center text-lg-start">
-          <div class="text-center p-3">
-            © 2025 GIT - Example
-          </div>
+          <div class="text-center p-3">© 2025 GIT - Example</div>
         </footer>
       </div>
     </div>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
@@ -147,6 +158,8 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
+    <!-- notify -->
+    <script src="./dist/notify.js"></script>
     <script src="./code.js"></script>
   </body>
 </html>
