--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
               <a class="nav-link" href="./details.html">Details</a>
             </li>
           </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./tables.html">Tables</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
