agregacion de formulario

--- a/form.html
+++ b/form.html
@@ -8,6 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
     <!-- Bootstrap CSS v5.2.0-beta1 -->
     <link
       rel="stylesheet"
@@ -72,82 +73,32 @@
           </button>
         </div>
       </div>
-    </div>
-
-    <div class="container mt-5">
-      <div class="row justify-content-center">
-        <div class="col-3">
-          <h1>Heading 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
-        <div class="col-3">
-          <h1>Heading 2</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
-        <div class="col-3">
-          <h1>Heading 3</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
-        <div class="col-3">
-          <h1>Heading 4</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
-        <div class="col-3">
-          <h1>Heading 5</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
-        <div class="col-3">
-          <h1>Heading 6</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
-        <div class="col-3">
-          <h1>Heading 7</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
-        <div class="col-3">
-          <h1>Heading 8</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            quidem, voluptates, quod, quos quas quae quibusdam doloribus
-            voluptatum quia doloremque nemo. Quisquam quidem, voluptates, quod,
-            quos quas quae quibusdam doloribus voluptatum quia doloremque nemo.
-          </p>
-        </div>
+      <div class="container mt-5">
+        <!-- crearme un formulario  -->
+        <form id="form">
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="Enter your name"
+              required
+              autofocus
+            />
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+        </form>
+        <button type="submit" class="btn btn-primary">Submit</button>
         <!-- footer -->
         <footer class="bg-light text-center text-lg-start">
           <div class="text-center p-3">© 2025 GIT - Example</div>
