--- a/home.html
+++ b/home.html
@@ -49,6 +49,11 @@
               <a class="nav-link" href="./tables.html">Tables</a>
             </li>
           </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./form.html">Form</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
