--- a/tables.html
+++ b/tables.html
@@ -49,6 +49,11 @@
               <a class="nav-link" href="./tables.html">Tables</a>
             </li>
           </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./form.html">Form</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -94,7 +99,7 @@
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td colSpan="2">Larry the Bird</td>
+              <td colspan="2">Larry the Bird</td>
               <td>@twitter</td>
             </tr>
           </tbody>
@@ -123,7 +128,7 @@
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td colSpan="2">Larry the Bird</td>
+              <td colspan="2">Larry the Bird</td>
               <td>@twitter</td>
             </tr>
           </tbody>
@@ -152,7 +157,7 @@
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td colSpan="2">Larry the Bird</td>
+              <td colspan="2">Larry the Bird</td>
               <td>@twitter</td>
             </tr>
           </tbody>
