--- a/form.html
+++ b/form.html
@@ -98,7 +98,7 @@
             />
           </div>
         </form>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" onclick="validar()">Submit</button>
         <!-- footer -->
         <footer class="bg-light text-center text-lg-start">
           <div class="text-center p-3">© 2025 GIT - Example</div>
@@ -122,5 +122,16 @@
     <!-- notify -->
     <script src="./dist/notify.js"></script>
     <script src="./code.js"></script>
+    <script>
+      const name = document.getElementById("name");
+      const email = document.getElementById("email");
+      const validar = () => {
+        if (name.value === "" || email.value === "") {
+          $.notify("Please fill in all fields", "error");
+        } else {
+          $.notify("Form submitted successfully", "success");
+        }
+      };
+    </script>
   </body>
 </html>
